@@ -5,6 +5,9 @@ Changelog
 1.2.5 (unreleased)
 ------------------
 
+- Use the same byline in blog entry used in overview.
+  [Julian Infanger]
+
 - Added new templates for blog and blog-entry. Requires Plone 4.
   [Julian Infanger]
 
